<resources>
    <string name="app_name">Project Management App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_projects">Projects</string>
    <string name="logout_button">Logout</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="back_btn_text">back to projects list</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="project_name_textview">PROJECT NAME</string>
    <string name="project_desc_textview">PROJECT DESCRIPTION</string>
    <string name="time_range_textview">TIME RANGE</string>
    <string name="delete_btn_text">DELETE</string>
    <string name="update_btn_text">UPDATE</string>
    <string name="create_btn_text">CREATE</string>
    <string name="status_textview">STATUS</string>
</resources>